# k8s-voca

./: .gitignore  Pipfile  README.md  deploy_gitpage.sh  deploy_pip.sh  mkdocs.yml  setup.cfg  test.sh
docs/: docs.md  index.md
report/test/: tests.xml
src/k8s_voca/: __init__.py  k8s_voca.py
tests/k8s_voca/: test_k8s_voca.py
