[metadata]
name = k8s_voca
version = 0.1.0
author = dmario24
author_email = data.mario24@gmail.com
description = kubernetes vocabulary
long_description = file: README.md
long_description_content_type = text/markdown
url = https://dmario24.github.io/k8s-voca
project_urls =
    Bug Tracker = https://github.com/dmario24/k8s-voca/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
license = GNU General Public License (GPL)
platform = macOS

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    kv = k8s_voca:ping
